--- a/index.html
+++ b/index.html
@@ -1,17 +1,13 @@
 <!DOCTYPE html>
 <html>
 <body>
-<h1>Bitcoin Lightning Node</h1>
-<h3>⚡Lightning Node</h3>
-<p><input style="width: 625px;" type="text" value="0265af0fccb2642f1824b9802fc5cb38107a68e706a596ed68dae3fe8fb4f68903@byteball.gotdns.ch:9735" /></p>
-<p><img src="https://i.imgur.com/RQ2k75V.png" alt="Bitcoin Lightning Node" width="120" height="120" /></p>
-<p><a href="https://1ml.com/node/0265af0fccb2642f1824b9802fc5cb38107a68e706a596ed68dae3fe8fb4f68903" target="_blank" rel="noopener"> status (extern 1ML.com) </a> <br /> <a href="https://raito.systemb.co/node/0265af0fccb2642f1824b9802fc5cb38107a68e706a596ed68dae3fe8fb4f68903" target="_blank" rel="noopener"> status (extern systemb.co) </a> <br /> <a href="https://www.robtex.com/lightning/node/0265af0fccb2642f1824b9802fc5cb38107a68e706a596ed68dae3fe8fb4f68903" target="_blank" rel="noopener"> status (extern robtex.com) </a> <br /> <a href="https://www.robtex.com/lightning/path/0265af0fccb2642f1824b9802fc5cb38107a68e706a596ed68dae3fe8fb4f68903" target="_blank" rel="noopener"> graph (extern robtex.com) </a></p>
+<p><!-- #######  YAY, I AM THE SOURCE EDITOR! #########--></p>
+<h2><span style="color: #ff0000;"><strong>Welcome on Prixpirate.ch !&nbsp;</strong></span></h2>
+<p>This domain is for sale - contact <strong><a href="mailto:smartside.ch@gmail.com">smartside.ch@gmail.com</a></strong></p>
 <p>&nbsp;</p>
-<hr />
-<h3>⚡Why Byteball.be?</h3>
-<p>This is a Bitcoin Lightning Node hosted in the heart of the Swiss mountains. The name of the node comes from the cryptocurrency called Byteball. The aim of this node is to raise awarness for this project and help to grow the lightning ecosystem. Feel free to open some channels :-)</p>
-<p>Donations: <a href="bitcoin:35C6xKb9GBFbhaMcKBPEnWJcW2uLJ1VDCn" target="_blank" rel="noopener"> 35C6xKb9GBFbhaMcKBPEnWJcW2uLJ1VDCn </a></p>
-<p>Lightning tips: coming soon!</p>
+<p><strong><img src="https://html-online.com/editor/tinymce4_6_5/plugins/emoticons/img/smiley-cool.gif" alt="cool" /><img src="https://html-online.com/editor/tinymce4_6_5/plugins/emoticons/img/smiley-cool.gif" alt="cool" /><img src="https://html-online.com/editor/tinymce4_6_5/plugins/emoticons/img/smiley-cool.gif" alt="cool" /></strong></p>
+<p>&nbsp;</p>
+<p><strong>&nbsp;</strong></p>
 
 </body>
 </html>
